--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="Приглашение на самый важный день для нас"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
